Fix errors in concocting recipe builder